--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,13 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
+  "manifest_version": 2,
+  "name": "Canvas-Student-UI",
+  "version": "0.1",
+  "description": "Redesigned UI for canvas, created by students",
+  "content_scripts": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "matches": ["*://*.instructure.com/"],
+      "css": ["/static/css/main.css"],
+      "js": ["/static/js/main.js"]
     }
-  ],
-  "start_url": "./index.html",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
